# socket_chat

./: Cargo.toml  tmux.conf.yml
src/: client.rs  server.rs
src/app/: mod.rs
src/utils/: events.rs  mod.rs
