[package]
name = "socket_chat"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
anyhow = "1.0.94"
crossterm = "0.28.1"
ratatui = "0.29.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.133"
